# PIC-Assembler

./: .gitignore  ARCHITECTURE.md  CLEANUP_COMPLETE.md  CMakeLists.txt  COMPREHENSIVE_ERROR_ANALYSIS.md  DEVICES_INDEX.md  DEVICE_DATABASE_EXPANSION.md  DEVICE_MEMORY_REPORT.md  DEVICE_SPECS_FIX.md  DEVICE_SUPPORT.md  ENCODING_VERIFICATION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Microchip.PIC18F-Q_DFP.pdsc  OPTIMIZATION_PLAN.md  PROGRAMMING.md  QUICK_REFERENCE.md  README.md  README_DEVICES.md  SUMMARY.md  TEST_PLAN.md  TODO.md  TUTORIAL.md  device_catalog.json  device_lookup_generated.cpp  device_memory_specifications.csv  device_memory_specs.txt  device_memory_specs_clean.txt  device_memory_specs_complete.txt  device_memory_specs_minimal.txt  device_memory_specs_sorted.txt  device_memory_specs_unique.txt  device_names.txt  device_pack_manager.py  device_specs_generated.h  device_specs_generated.h.old  device_specs_generated_new.h  device_specs_lookups.cpp  error_demo.asm  error_single.asm  (+53 more)
.github/: copilot-instructions.md
Microchip.PIC12-16F1xxx_DFP.1.8.254.atpack_FILES/: Microchip.PIC12-16F1xxx_DFP.pdsc  Microchip.PIC12-16F1xxx_DFP.sha1
Microchip.PIC16Fxxx_DFP.1.7.162.atpack_FILES/: Microchip.PIC16Fxxx_DFP.pdsc  Microchip.PIC16Fxxx_DFP.sha1
Microchip.PIC18F-Q_DFP.1.28.451.atpack_FILES/: Microchip.PIC18F-Q_DFP.sha1  package.content
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gnsasm  test_instruction_encoding
device_includes/: 10f200.cgen.inc  10f202.cgen.inc  10f204.cgen.inc  10f206.cgen.inc  10f220.cgen.inc  10f222.cgen.inc  10f320.cgen.inc  10f322.cgen.inc  10lf320.cgen.inc  10lf322.cgen.inc  12c508.cgen.inc  12c508a.cgen.inc  12c509.cgen.inc  12c509a.cgen.inc  12c671.cgen.inc  12c672.cgen.inc  12ce518.cgen.inc  12ce519.cgen.inc  12ce673.cgen.inc  12ce674.cgen.inc  12cr509a.cgen.inc  12f1501.cgen.inc  12f1572.cgen.inc  12f1822.cgen.inc  12f508.cgen.inc  12f509.cgen.inc  12f510.cgen.inc  12f519.cgen.inc  12f529t39a.cgen.inc  12f529t48a.cgen.inc  12f609.cgen.inc  12f615.cgen.inc  12f617.cgen.inc  12f629.cgen.inc  12f635.cgen.inc  12f675.cgen.inc  12f683.cgen.inc  12f752.cgen.inc  12hv609.cgen.inc  12hv615.cgen.inc  (+1345 more)
docs/: ARCHITECTURE.md  BANKSEL_IMPLEMENTATION_PLAN.md  INSTRUCTION_ENCODING_VERIFICATION.md  TODO.md
edc/: PIC18F04Q20.PIC  PIC18F04Q41.PIC  PIC18F05Q20.PIC  PIC18F06Q20.PIC  PIC18F06Q40.PIC  PIC18F14Q20.PIC  PIC18F14Q41.PIC  PIC18F15Q20.PIC  PIC18F16Q40.PIC  PIC18F24Q10.PIC  PIC18F24Q24.PIC  PIC18F24Q71.PIC  PIC18F25Q24.PIC  PIC18F25Q43.PIC  PIC18F26Q10.PIC  PIC18F26Q24.PIC  (+20 more)
src/: cli.h  (+25 more)
(+2452 files in other folders)
